test/e2e/chainsaw/common/assertions/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ($gateway_name)
status:
  conditions:
    - type: Accepted
      status: "True"
