test/e2e/chainsaw/common/assertions/gatewayconfiguration.yaml
apiVersion: gateway-operator.konghq.com/v2beta1
kind: GatewayConfiguration
metadata:
  name: ($gateway_configuration_name)
  namespace: ($kong_namespace)
